trying to fix subscribe container on safari

--- a/src/view/static/style/master.css
+++ b/src/view/static/style/master.css
@@ -219,8 +219,8 @@ nav {
     display: grid;
     justify-items: center;
     align-items: center;
-    row-gap: 20px;
     grid-template-columns: auto 70%;
+    -webkit-overflow-scrolling: touch;
 }
 .submit-form * {
     display: inline-block;
